# aloud-tts

./: .gitignore  LICENSE  README.md  RELEASE_STATUS.md  install.sh  pyproject.toml  setup_app.py
.github/workflows/: release.yml  test.yml
docs/: homebrew-misaki-dep-fix.md
src/tts_app/: __main__.py  config.py
src/tts_app/cli/: main.py
src/tts_app/core/: audio.py  clipboard.py  hotkey.py  speaker.py  tts.py
src/tts_app/menubar/: app.py  icons.py
tests/: conftest.py  test_audio.py  test_clipboard.py  test_hotkey.py  test_speaker.py
