[project]
name = "aloud-tts"
version = "0.1.0"
description = "macOS menu bar text-to-speech powered by MLX Audio (Kokoro)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
keywords = ["tts", "text-to-speech", "macos", "menu-bar", "kokoro", "mlx"]
classifiers = [
    "Operating System :: MacOS",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rumps>=0.4.0",
    "mlx-audio>=0.4.2",
    "soundfile>=0.12.1",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "misaki[en]>=0.9.4",
]

[project.urls]
Homepage = "https://github.com/simonteague6/aloud-tts"
Issues = "https://github.com/simonteague6/aloud-tts/issues"

[project.scripts]
aloud-tts = "tts_app.menubar.app:run"
aloud-tts-cli = "tts_app.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_app"]

[tool.ruff]
line-length = 100
target-version = "py312"
